azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "vhdStorageType": {
      "type": "string",
      "defaultValue": "Standard_LRS",
      "allowedValues": [
        "Standard_LRS",
        "Standard_ZRS",
        "Standard_GRS",
        "Standard_RAGRS",
        "Premium_LRS"
      ]
    },
    "dcaAdminUserName": {
      "type": "string",
      "minLength": 1
    },
    "dcaAdminPassword": {
      "type": "securestring"
    },
    "dcaWindowsOSVersion": {
      "type": "string",
      "defaultValue": "2012-R2-Datacenter",
      "allowedValues": [
        "2008-R2-SP1",
        "2012-Datacenter",
        "2012-R2-Datacenter",
        "2016-Datacenter",
        "2016-Nano-Server"
      ]
    }
  },
  "variables": {
    "dcaImageOffer": "WindowsServer",
    "dcaImagePublisher": "MicrosoftWindowsServer",
    "dcaName": "dca",
    "dcaNicName": "dcaNic",
    "dcaNicSubnetRef": "[concat(variables('dcaNicVnetID'), '/subnets/', 'SubnetA')]",
    "dcaNicVnetID": "[resourceId('Microsoft.Network/virtualNetworks', variables('VNetName'))]",
    "dcaOSDiskName": "dcaOSDisk",
    "dcaPublicIpName": "dcaPublicIp",
    "dcaStorageAccountContainerName": "vhds",
    "dcaVmSize": "Standard_D2_v2",
    "SubnetANsgName": "SubnetA.NSG",
    "SubnetAPrefix": "10.0.1.0/24",
    "SubnetBNsgName": "SubnetB.NSG",
    "SubnetBPrefix": "10.0.2.0/24",
    "vhdStorageAccountName": "[concat('vhdstorage', uniqueString(resourceGroup().id))]",
    "VNetName": "TwoSubnetsVNet",
    "VNetPrefix": "10.0.0.0/16",
    "dscZipLocationUri": "https://raw.githubusercontent.com/carstendullmann/twodomainsdsc/master/DSC.zip",
    "dcaDscConfigurationDataUri": "https://raw.githubusercontent.com/carstendullmann/twodomainsdsc/master/DSC/dcaConfigurationData.psd1"
  },
  "resources": [
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('SubnetANsgName')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
          {
            "name": "Subnet_B_In",
            "properties": {
              "description": "Subnet B In",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('SubnetBPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 200,
              "direction": "Inbound"
            }
          },
          {
            "name": "RDP_IN",
            "properties": {
              "description": "RDP IN",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('SubnetBNsgName')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
          {
            "name": "Subnet_A_In",
            "properties": {
              "description": "Subnet A In",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('SubnetAPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 200,
              "direction": "Inbound"
            }
          },
          {
            "name": "RDP_Internet_In",
            "properties": {
              "description": "RDP Internet In",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "Internet_Out",
            "properties": {
              "description": "Internet Out",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Internet",
              "access": "Deny",
              "priority": 300,
              "direction": "Outbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[variables('VNetName')]",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[concat('Microsoft.Network/networkSecurityGroups/', variables('SubnetANsgName'))]",
        "[concat('Microsoft.Network/networkSecurityGroups/', variables('SubnetBNsgName'))]"
      ],
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('VNetPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "SubnetA",
            "properties": {
              "addressPrefix": "[variables('SubnetAPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('SubnetANsgName'))]"
              }
            }
          },
          {
            "name": "SubnetB",
            "properties": {
              "addressPrefix": "[variables('SubnetBPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('SubnetBNsgName'))]"
              }
            }
          }
        ]
      }
    },
    {
      "name": "[variables('vhdStorageAccountName')]",
      "type": "Microsoft.Storage/storageAccounts",
      "apiVersion": "2016-01-01",
      "dependsOn": [],
      "sku": {
          "name": "[parameters('vhdStorageType')]"
      },
      "kind": "Storage",
      "location": "[resourceGroup().location]",
      "properties": {}
    },
    {
      "name": "[variables('dcaNicName')]",
      "type": "Microsoft.Network/networkInterfaces",
      "location": "[resourceGroup().location]",
      "apiVersion": "2016-03-30",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', variables('VNetName'))]",
        "[resourceId('Microsoft.Network/publicIPAddresses', variables('dcaPublicIpName'))]"
      ],
      "tags": {
        "displayName": "[variables('dcaNicName')]"
      },
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[variables('dcaNicSubnetRef')]"
              },
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('dcaPublicIpName'))]"
              }
            }
          }
        ]
      }
    },
    {
      "name": "[variables('dcaPublicIpName')]",
      "type": "Microsoft.Network/publicIPAddresses",
      "location": "[resourceGroup().location]",
      "apiVersion": "2016-03-30",
      "dependsOn": [],
      "tags": {
        "displayName": "[variables('dcaPublicIpName')]"
      },
      "properties": {
        "publicIPAllocationMethod": "Dynamic"
      }
    },
    {
      "name": "[variables('dcaName')]",
      "type": "Microsoft.Compute/virtualMachines",
      "location": "[resourceGroup().location]",
      "apiVersion": "2015-06-15",
      "dependsOn": [
        "[resourceId('Microsoft.Storage/storageAccounts', variables('vhdStorageAccountName'))]",
        "[resourceId('Microsoft.Network/networkInterfaces', variables('dcaNicName'))]"
      ],
      "tags": {
        "displayName": "dca"
      },
      "properties": {
        "hardwareProfile": {
          "vmSize": "[variables('dcaVmSize')]"
        },
        "osProfile": {
          "computerName": "[concat(variables('dcaName'),'cn')]",
          "adminUsername": "[parameters('dcaAdminUsername')]",
          "adminPassword": "[parameters('dcaAdminPassword')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "[variables('dcaImagePublisher')]",
            "offer": "[variables('dcaImageOffer')]",
            "sku": "[parameters('dcaWindowsOSVersion')]",
            "version": "latest"
          },
          "osDisk": {
            "name": "dcaOSDisk",
            "vhd": {
              "uri": "[concat(reference(resourceId('Microsoft.Storage/storageAccounts', variables('vhdStorageAccountName')), '2016-01-01').primaryEndpoints.blob, variables('dcaStorageAccountContainerName'), '/', variables('dcaOSDiskName'), '.vhd')]"
            },
            "caching": "ReadWrite",
            "createOption": "FromImage"
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('dcaNicName'))]"
            }
          ]
        }
      },
      "resources": [
        {
          "comments": "the forceUpdateTag must be changed when a new version of the DSC config should be applied to an existing VM. Otherwise the changes will not be picked up.",
          "name": "Microsoft.Powershell.DSC",
          "type": "extensions",
          "location": "[resourceGroup().location]",
          "apiVersion": "2016-03-30",
          "dependsOn": [
            "[resourceId('Microsoft.Compute/virtualMachines', variables('dcaName'))]"
          ],
          "tags": {
            "displayName": "dcaDSC"
          },
          "properties": {
            "publisher": "Microsoft.Powershell",
            "type": "DSC",
            "typeHandlerVersion": "2.20",
            "autoUpgradeMinorVersion": true,
            "forceUpdateTag": "2.0",
            "settings": {
              "configuration": {
                "url": "[variables('dscZipLocationUri')]",
                "script": "DomainConfig.ps1",
                "function": "DomainConfig"
              },
              "configurationArguments": {
              },
              "configurationData": {
                "url": "[variables('dcaDscConfigurationDataUri')]"
              }
            },
            "protectedSettings": {
              "configurationArguments": {
                "universalCred": {
                  "userName": "Carsten",
                  "password": "SafePass3142"
                }
              }
            }
          }
        }
      ]
    }
  ]
}
